--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Poppins", "sans-serif";
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #5A9BD4; /* Biru Serenity */
-    color: white;
-    padding: 10px;
+    background-color: #fff;
+    color: black;
+    padding: 20px;
     display: flex;
     justify-content: space-between; /* Membuat ruang antara elemen-elemen di header */
     align-items: center; /* Posisikan elemen secara vertikal di tengah */
@@ -25,34 +27,55 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
+    margin-right: 50px;
 }
 
 nav ul li a {
-    color: white;
+    color: black;
     text-decoration: none;
+}
+
+nav ul li a:hover {
+    color: #ad33ff; /* Ubah warna teks saat cursor dilewati */
 }
 
 main {
     padding: 20px;
-}
+    text-align: left;
+    margin-top: 5px;
+    min-height: 100vh;
+    display: flex;
+    background-image: url('workspace.jpg');
+    background-size: cover; /* Membuat gambar latar belakang menutupi seluruh area */
+    position: relative; /* Diperlukan untuk penempatan overlay */
+} 
 
 .homepage {
-    background-color: #F7CAC9; /* Soft Pink */
-    padding: 50px;
-    text-align: center;
-    border-radius: 10px;
+    margin-top: 50px;
+    margin-left: -20; /* Menggeser elemen .homepage ke kiri */
+    margin-right: auto; /* Menggeser elemen .homepage ke kanan */
+    max-width: 600px; /* Batasan lebar maksimum untuk teks */
+    padding: 0 20px; /* Menambahkan padding agar teks tidak menyentuh tepi kotak */
 }
 
-.homepage h2 {
-    margin-top: 0;
+.h2{
+    font-size: 60px;
 }
 
 .homepage p {
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
-/* Tambahkan kode CSS berikut untuk dropdown */
+.text {
+    color: white;
+}
+
+.content {
+    display: flex;
+    justify-content: space-between; /* Membuat ruang antara tulisan dan gambar */
+    align-items: center;
+}
+
 .dropdown {
     position: relative;
     display: inline-block;
@@ -61,11 +84,12 @@ main {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #F7CAC9;
+    text-shadow: none;
+    background-color: #fff;
     min-width: 160px;
     z-index: 1;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2); /* Tambahkan bayangan */
-    border-radius: 5px; /* Tambahkan sudut bulat */
+    box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2);
+    border-radius: 5px;
 }
 
 .dropbtn {
@@ -77,19 +101,21 @@ main {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    transition: background-color 0.3s; /* Efek transisi */
+    transition: background-color 0.3s;
+    border-bottom: 1px solid #ccc;
 }
 
 .dropdown-content a:hover {
     background-color: #ddd;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown-content.show {
     display: block;
 }
 
-.gallery-section.gallery-section {
+.gallery-section {
     text-align: center;
+    color: #fff;
 }
 
 .gallery-container {
@@ -97,31 +123,35 @@ main {
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
+
 }
 
 figure {
     margin: 0;
+    position: relative;
+    overflow: hidden;
 }
 
 figure img {
     max-width: 500px;
     border-radius: 5px;
+    transition: transform 0.3s ease;
 }
 
 figcaption {
     margin-top: 10px;
     font-style: italic;
-    color: #666;
+    color: white;
 }
 
 .contact-section {
     text-align: center;
-    background-color: #F7CAC9; /* Soft Pink */
+    background-color: white;
     padding: 50px;
     border-radius: 10px;
     max-width: 600px;
     margin: 0 auto;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1); /* Efek bayangan */
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
 }
 
 .contact-section h2 {
@@ -130,12 +160,12 @@ figcaption {
 
 .contact-section p {
     margin-bottom: 20px;
-    color: #555; /* Warna teks yang lebih gelap */
+    color: #555;
 }
 
 .contact-section address {
     font-style: normal;
-    color: #333; /* Warna teks yang lebih gelap */
+    color: #333;
 }
 
 .article-section {
@@ -144,7 +174,6 @@ figcaption {
     background-color: white;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .article-section h2 {
